<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_wallpaper"
        android:orientation="vertical"
        tools:context=".ProfileActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/profile_toolbar"
                layout="@layout/tool_bar_no_logo_layout"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#fff"
                android:importantForAccessibility="no"/>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="360dp">

            <ImageView
                android:id="@+id/profile_user_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/blank_contact"
                android:importantForAccessibility="no"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/profile_details_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/profile_user_name"
                    android:layout_width="162dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/galada"
                    android:gravity="center"
                    android:text="@string/user_name"
                    android:textColor="#fff"
                    android:textSize="35sp"
                    app:layout_constraintBottom_toTopOf="@+id/profile_user_status"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/profile_user_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/atlas_bold"
                    android:text="@string/default_status"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/profile_send_friend_request_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="25dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/atlas_bold"
                    android:onClick="friendRequestBtnClickListener"
                    android:text="@string/send_friend_request"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.755" />

                <Button
                    android:id="@+id/decline_friend_request_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="104dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/atlas_bold"
                    android:onClick="declineFriendRequestBtnClickListener"
                    android:text="@string/decline"
                    android:textColor="#fff"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_send_friend_request_btn"
                    app:layout_constraintVertical_bias="0.0" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/profile_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:visibility="invisible"/>

</RelativeLayout>